--- a/www/styles/index_styles.css
+++ b/www/styles/index_styles.css
@@ -319,21 +319,9 @@ section
 3.1 Logo
 *********************************/
 
-.logo_container
-{
-	display: inline-block;
-	padding-left: 6px;
-	padding-top: 6px;
-}
-.logo span
-{
-	font-family: 'Open Sans', sans-serif;
-	font-size: 30px;
-	font-weight: 900;
-	color: #3a3a3a;
-	vertical-align: middle;
-	text-transform: uppercase;
-	margin-left: 3px;
+.logo img
+{	width: 50%;
+	height: 50%;
 }
 
 /*********************************
