--- a/www/styles/index_styles.css
+++ b/www/styles/index_styles.css
@@ -42,28 +42,17 @@ COLOR PALETTE
 2. Body and some general stuff
 *********************************/
 
-*
-{
-	margin: 0;
-	padding: 0;
-	-webkit-font-smoothing: antialiased;
-	-webkit-text-shadow: rgba(0,0,0,.01) 0 0 1px;
-	text-shadow: rgba(0,0,0,.01) 0 0 1px;
-}
-body
-{
+
+body {
+
 	font-family: 'Roboto', sans-serif;
-	font-size: 14px;
-	font-weight: 400;
-	background: #FFFFFF;
-	color: #a5a5a5;
+
+
 }
-
-
 
 h1, h2, h3, h4, h5, h6
 {
-	font-family: 'Roboto', sans-serif;
+
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-shadow: rgba(0,0,0,.01) 0 0 1px;
 	text-shadow: rgba(0,0,0,.01) 0 0 1px;
@@ -93,405 +82,8 @@ h1, h2, h3, h4, h5, h6
 }
 
 /*********************************
-3.2 Main Nav
+3.2 Main 
 *********************************/
-
-.main_nav_container
-{
-	display: inline-block;
-	margin-left: auto;
-	padding-right: 93px;
-}
-.main_nav
-{
-	margin-top: 7px;
-	
-}
-.main_nav_item
-{
-	display: inline-block;
-	margin-right: 40px;
-}
-
-.main_nav_item a
-{
-	font-family: 'Open Sans', sans-serif;
-	font-size: 14px;
-	text-transform: uppercase;
-	font-weight: 700;
-	color: #3a3a3a;
-	-webkit-transition: all 200ms ease;
-	-moz-transition: all 200ms ease;
-	-ms-transition: all 200ms ease;
-	-o-transition: all 200ms ease;
-	transition: all 200ms ease;
-}
-.main_nav_item a:hover
-{
-	color: #ffb606;
-}
-
-/*********************************
-3.3 Header Side
-*********************************/
-
-.header_side
-{
-	width: 279px;
-	height: 100%;
-	background: #ffb606;
-}
-.header_side img
-{
-	width: 29px;
-	height: 29px;
-}
-.header_side span
-{
-	display: block;
-	position: relative;
-	font-size: 18px;
-	font-weight: 500;
-	color: #FFFFFF;
-	padding-left: 12px;
-}
-
-/*********************************
-3.4 Hamburger
-*********************************/
-
-.hamburger_container
-{
-	position: absolute;
-	top: 50%;
-	-webkit-transform: translateY(-50%);
-	-moz-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	-o-transform: translateY(-50%);
-	transform: translateY(-50%);
-	right: 20px;
-	display: none;
-	cursor: pointer;
-}
-.hamburger_container i
-{
-	font-size: 24px;
-	padding: 10px;
-	color: #3a3a3a;
-}
-.hamburger_container:hover i
-{
-	color: #ffb606;
-}
-
-/*********************************
-4. Menu
-*********************************/
-
-.menu_container
-{
-	position: fixed;
-	top: 0;
-	right: -50vw;
-	width: 50vw;
-	height: 100vh;
-	background: #FFFFFF;
-	z-index: 12;
-	-webkit-transition: all 0.6s ease;
-	-moz-transition: all 0.6s ease;
-	-ms-transition: all 0.6s ease;
-	-o-transition: all 0.6s ease;
-	transition: all 0.6s ease;
-	visibility: hidden;
-	opacity: 0;
-}
-.menu_container.active
-{
-	visibility: visible;
-	opacity: 1;
-	right: 0;
-}
-.menu
-{
-	position: absolute;
-	top:150px;
-	left: 0;
-	padding-left: 15%;
-}
-.menu_list
-{
-	-webkit-transform: translateY(3.5rem);
-	-moz-transform: translateY(3.5rem);
-	-ms-transform: translateY(3.5rem);
-	-o-transform: translateY(3.5rem);
-	transform: translateY(3.5rem);
-	-webkit-transition: all 200ms ease;
-	-moz-transition: all 200ms ease;
-	-ms-transition: all 200ms ease;
-	-o-transition: all 200ms ease;
-	transition: all 1000ms 600ms ease;
-	opacity: 0;
-}
-.menu_container.active .menu_list
-{
-	-webkit-transform: translateY(0px);
-	-moz-transform: translateY(0px);
-	-ms-transform: translateY(0px);
-	-o-transform: translateY(0px);
-	transform: translateY(0px);
-	opacity: 1;
-}
-.menu_item
-{
-	margin-bottom: 9px;
-}
-.menu_item a
-{
-	font-family: 'Open Sans', sans-serif;
-	font-size: 36px;
-	font-weight: 700;
-	color: #3a3a3a;
-	-webkit-transition: all 200ms ease;
-	-moz-transition: all 200ms ease;
-	-ms-transition: all 200ms ease;
-	-o-transition: all 200ms ease;
-	transition: all 200ms ease;
-}
-.menu_item a:hover
-{
-	color: #ffb606;
-}
-.menu_close_container
-{
-	position: absolute;
-	top: 86px;
-	right: 79px;
-	width: 21px;
-	height: 21px;
-	cursor: pointer;
-	-webkit-transform: rotate(45deg);
-	-moz-transform: rotate(45deg);
-	-ms-transform: rotate(45deg);
-	-o-transform: rotate(45deg);
-	transform: rotate(45deg);
-}
-.menu_close
-{
-	top: 9px;
-	width: 21px;
-	height: 3px;
-	background: #3a3a3a;
-	-webkit-transition: all 200ms ease;
-	-moz-transition: all 200ms ease;
-	-ms-transition: all 200ms ease;
-	-o-transition: all 200ms ease;
-	transition: all 200ms ease;
-}
-.menu_close::after
-{
-	display: block;
-	position: absolute;
-	top: -9px;
-	left: 9px;
-	content: '';
-	width: 3px;
-	height: 21px;
-	background: #3a3a3a;
-	-webkit-transition: all 200ms ease;
-	-moz-transition: all 200ms ease;
-	-ms-transition: all 200ms ease;
-	-o-transition: all 200ms ease;
-	transition: all 200ms ease;
-}
-.menu_close_container:hover .menu_close,
-.menu_close_container:hover .menu_close::after
-{
-	background: #ffb606;
-}
-
-
-/*********************************
-5. Home
-*********************************/
-
-.home
-{
-	width: 100%;
-	height: 447px;
-}
-.home_background_container
-{
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-}
-.home_background
-{
-	width: 100%;
-	height: 100%;
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center center;
-}
-.home_content
-{
-	position: absolute;
-	left: 50%;
-	bottom: 109px;
-	-webkit-transform: translateX(-50%);
-	-moz-transform: translateX(-50%);
-	-ms-transform: translateX(-50%);
-	-o-transform: translateX(-50%);
-	transform: translateX(-50%);
-	background: #ffb606;
-	padding-top: 24px;
-	padding-bottom: 18px;
-	padding-left: 39px;
-	padding-right: 42px;
-}
-.home_content h1
-{
-	font-size: 72px;
-	font-weight: 400;
-	color: #FFFFFF;
-	line-height: 0.5;
-}
-
-/*********************************
-8. Buttons
-*********************************/
-
-.button
-{
-	cursor: pointer;
-}
-.button:hover
-{
-	box-shadow: 0px 10px 20px rgba(0,0,0,0.2);
-}
-.button a
-{
-	font-size: 14px;
-	line-height: 48px;
-	font-weight: 700;
-	text-transform: uppercase;
-}
-.button_1
-{
-	width: 202px;
-	height: 48px;
-}
-
-
-
-/*********************************
-10. Footer
-*********************************/
-
-.footer
-{
-	width: 100%;
-	background: #1a1a1a;
-}
-
-
-/*********************************
-10.2 Footer Content
-*********************************/
-
-.footer_content 
-{
-	padding-top: 80px;
-	padding-bottom: 83px;
-	border-bottom: solid 2px #4d4e4e;
-}
-.footer_content .logo_container
-{
-	padding-left: 0px;
-}
-.footer_content .logo span
-{
-	color: #FFFFFF;
-}
-.footer_about_text
-{
-	margin-top: 24px;
-	margin-bottom: 0px;
-	padding-right: 20px;
-}
-.footer_column_title
-{
-	font-size: 18px;
-	font-weight: 500;
-	color: #FFFFFF;
-	padding-top: 15px;
-}
-.footer_column_content
-{
-	margin-top: 32px;
-}
-.footer_list_item
-{
-	margin-bottom: 11px;
-}
-.footer_list_item a
-{
-	font-size: 14px;
-	color: #a5a5a5;
-	-webkit-transition: all 200ms ease;
-	-moz-transition: all 200ms ease;
-	-ms-transition: all 200ms ease;
-	-o-transition: all 200ms ease;
-	transition: all 200ms ease;
-}
-.footer_list_item a:hover
-{
-	color: #ffb606;
-}
-.footer_contact_item
-{
-	font-size: 14px;
-	font-weight: 400;
-	color: #a5a5a5;
-	margin-bottom: 22px;
-}
-.footer_contact_item:last-child
-{
-	margin-bottom: 0px;
-}
-.footer_contact_icon
-{
-	display: inline-block;
-	width: 24px;
-	height: 24px;
-	vertical-align: middle;
-	margin-right: 10px;
-}
-.footer_contact_icon img
-{
-	width: 100%;
-}
-
-/*********************************
-10.3 Footer Copyright
-*********************************/
-
-.footer_bar
-{
-	padding-top: 19px;
-	padding-bottom: 19px;
-}
-.footer_social .menu_social_item a i
-{
-	color: #FFFFFF;
-}
-.footer_social .menu_social_item a i:hover
-{
-	color: #ffb606;
-}
-.footer_social .menu_social_item:last-child
-{
-	margin-right: 0px;
+main {
+	min-height: 80vh;
 }
